# notebookLM

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20250228_add_slide_deck_custom_options.py  20250301_add_output_language.py  20250301_add_user_settings.py
backend/app/: config.py  database.py  main.py
backend/app/ai/: curl.txt  embeddings.py  llm_router.py  qwen3_vl_video.py  rag_pipeline.py
backend/app/ai/demo/: qwen3-vl-demo.py  qwen3-vl-video.py
backend/app/ai/prompts/: system.py
backend/app/api/: auth.py  chat.py  deps.py  mindmaps.py  notebooks.py  notes.py  settings.py  slide_deck.py  sources.py  studio.py
backend/app/commons/: util.py
backend/app/models/: chat.py  note.py  notebook.py  source.py  studio.py  user.py  user_settings.py
backend/app/parsers/: pdf_parser.py  web_parser.py  youtube_parser.py
backend/app/prompts/: slide.md
backend/app/schemas/: chat.py  note.py  notebook.py  source.py  studio.py  user.py  user_settings.py
backend/app/services/: auth_service.py  chat_service.py  infographic_service.py  mindmap_service.py  obs_storage.py  settings_service.py  slide_service.py  source_service.py
backend/app/tasks/: celery_app.py  source_tasks.py  studio_tasks.py
backend/app/templates/: mindmap_system_prompt.txt  slide_deck_system_prompt.txt
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts
nginx/: nginx.conf
scripts/: init_db.py
(+28 files in other folders)
